--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/noetic/radar_msgs
-	previous = 
-	base = 856c091
+	previous = 856c091
+	base = 6eda8fd
 	trim = 
 	trimbase = 
