--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/radar_msgs
-	previous = 
-	base = 9c19a81
+	previous = 9c19a81
+	base = 1e52e99
 	trim = 
 	trimbase = 
