--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/radar_msgs
-	previous = 
-	base = 5732b41
+	previous = 5732b41
+	base = b9ca303
 	trim = 
 	trimbase = 
