--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/noetic/radar_msgs
-	previous = 
-	base = 25679fb
+	previous = 25679fb
+	base = f728e45
 	trim = 
 	trimbase = 
