--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.1.0-1": ["Tue Mar 09 2021", "Steve Macenski", "stevenmacenski@gmail.com"]}
+{"0.1.0-2": ["Tue Mar 09 2021", "Steve Macenski", "stevenmacenski@gmail.com"], "0.1.0-1": ["Tue Mar 09 2021", "Steve Macenski", "stevenmacenski@gmail.com"]}
