--- a/package.xml
+++ b/package.xml
@@ -2,22 +2,22 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>radar_msgs</name>
-  <version>0.1.0</version>
+  <version>0.2.1</version>
   <description>Standard ROS messages for radars</description>
   <maintainer email="stevenmacenski@gmail.com">Steve Macenski</maintainer>
   <license>Apache-2.0</license>
 
-  <buildtool_depend>catkin</buildtool_depend>
-
-  <build_depend>message_generation</build_depend>
+  <buildtool_depend>ament_cmake</buildtool_depend>
 
   <depend>std_msgs</depend>
-  <depend>uuid_msgs</depend>
+  <depend>unique_identifier_msgs</depend>
   <depend>geometry_msgs</depend>
+  <depend>rosidl_default_generators</depend>
+  <depend>builtin_interfaces</depend>
 
-  <exec_depend>message_runtime</exec_depend>
+  <member_of_group>rosidl_interface_packages</member_of_group>
 
   <export>
-    <build_type>catkin</build_type>
+    <build_type>ament_cmake</build_type>
   </export>
 </package>
