--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/radar_msgs
-	previous = 
-	base = 00645d0
+	previous = 00645d0
+	base = ff9bd6e
 	trim = 
 	trimbase = 
