--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/galactic/radar_msgs
-	previous = 
-	base = 8399293
+	previous = 8399293
+	base = dd161c0
 	trim = 
 	trimbase = 
