--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/galactic/radar_msgs
-	previous = 
-	base = 8432e6d
+	previous = 8432e6d
+	base = f19a79d
 	trim = 
 	trimbase = 
