--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/galactic/radar_msgs
-	previous = 
-	base = ad14e51
+	previous = ad14e51
+	base = de93b0d
 	trim = 
 	trimbase = 
