--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/foxy/radar_msgs
-	previous = 
-	base = a912b06
+	previous = a912b06
+	base = f03c97d
 	trim = 
 	trimbase = 
