--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/foxy/radar_msgs
-	previous = 
-	base = df572a5
+	previous = df572a5
+	base = 1dcd961
 	trim = 
 	trimbase = 
