--- a/tracks.yaml
+++ b/tracks.yaml
@@ -102,4 +102,5 @@ tracks:
     ros_distro: rolling
     vcs_type: git
     vcs_uri: https://github.com/ros-perception/radar_msgs.git
-    version: :{auto}
+    version: 0.2.1
+    version_saved: :{auto}
