--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/radar_msgs
-	previous = 
-	base = dfdfacd
+	previous = dfdfacd
+	base = 1f3bc9c
 	trim = 
 	trimbase = 
