--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/radar_msgs
-	previous = 
-	base = 7e87c51
+	previous = 7e87c51
+	base = a40abbb
 	trim = 
 	trimbase = 
