--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/radar_msgs
-	previous = 
-	base = 7f9dee9
+	previous = 7f9dee9
+	base = f8756a7
 	trim = 
 	trimbase = 
