--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/radar_msgs
-	previous = 
-	base = d64935f
+	previous = d64935f
+	base = 8a4bd29
 	trim = 
 	trimbase = 
