--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/radar_msgs
-	previous = 
-	base = 4d64cab
+	previous = 4d64cab
+	base = cdfb5f6
 	trim = 
 	trimbase = 
