--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/radar_msgs
-	previous = 
-	base = 13aed81
+	previous = 13aed81
+	base = 066a43e
 	trim = 
 	trimbase = 
