--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/radar_msgs
-	previous = 
-	base = 42f791f
+	previous = 42f791f
+	base = 301b4a9
 	trim = 
 	trimbase = 
