--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/radar_msgs
-	previous = 
-	base = c0a2b1e
+	previous = c0a2b1e
+	base = 17fb02a
 	trim = 
 	trimbase = 
