Store releaser history

--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.2.2-2": ["Tue Mar 21 2023", "Steve Macenski", "stevenmacenski@gmail.com"]}
+{"0.2.2-3": ["Thu Apr 20 2023", "Steve Macenski", "stevenmacenski@gmail.com"], "0.2.2-2": ["Tue Mar 21 2023", "Steve Macenski", "stevenmacenski@gmail.com"]}
