--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/radar_msgs
-	previous = 
-	base = 730aec1
+	previous = 730aec1
+	base = ce0aaaa
 	trim = 
 	trimbase = 
