--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/radar_msgs
-	previous = 
-	base = 56fb0bf
+	previous = 56fb0bf
+	base = 6605c77
 	trim = 
 	trimbase = 
