--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/radar_msgs
-	previous = 
-	base = bb0b8b2
+	previous = bb0b8b2
+	base = 9016040
 	trim = 
 	trimbase = 
