--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/radar_msgs
-	previous = 
-	base = c978b33
+	previous = c978b33
+	base = 620d362
 	trim = 
 	trimbase = 
