--- a/tracks.yaml
+++ b/tracks.yaml
@@ -154,5 +154,4 @@ tracks:
     ros_distro: rolling
     vcs_type: git
     vcs_uri: https://github.com/ros-perception/radar_msgs.git
-    version: 0.2.2
-    version_saved: :{auto}
+    version: :{auto}
