--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.2.2-3": ["Wed Mar 06 2024", "Steve Macenski", "stevenmacenski@gmail.com"]}
+{"0.2.2-4": ["Fri Apr 19 2024", "Steve Macenski", "stevenmacenski@gmail.com"], "0.2.2-3": ["Wed Mar 06 2024", "Steve Macenski", "stevenmacenski@gmail.com"]}
