--- a/tracks.yaml
+++ b/tracks.yaml
@@ -154,7 +154,8 @@ tracks:
     ros_distro: kilted
     vcs_type: git
     vcs_uri: https://github.com/ros-perception/radar_msgs.git
-    version: :{auto}
+    version: 0.2.2
+    version_saved: :{auto}
   noetic:
     actions:
     - bloom-export-upstream :{vcs_local_uri} :{vcs_type} --tag :{release_tag} --display-uri
